fix: copyright letter-spacing

--- a/src/blocks/copyright/copyright.scss
+++ b/src/blocks/copyright/copyright.scss
@@ -14,7 +14,6 @@
   }
 
   &__text {
-    letter-spacing: -0.1px;
     line-height: 17px;
     color: $textColor_75;
   }
